    it's only meant to document what patches have been applied at extraction
    time. Closes: #525835
  * Let dpkg-buildpackage add the missing execute right on debian/rules if
    needed. Display a warning when it happens. Closes: #499088
  * Allow to combine -nc and -S in dpkg-buildpackage but display a warning
    saying that it's not advised. Closes: #304404

  [ Guillem Jover ]
  * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
    Thanks to Ivan Masár.
  * Sync archtable with architectures currently present in Debian sid.
    - Remove m68k.
    - Add kfreebsd-i386 and kfreebsd-amd64.
  * Add avr32 to cputable. Closes: #523456
  * Detect the curses headers to use instead of hardcoding them.
  * Make dpkg-source do not set arch:any in .dsc on arch-restricted packages.
    Thanks to Philipp Kern <pkern@debian.org>. Closes: #526617
  * Add '.hgtags' to the default dpkg-source -i regex and -I pattern.
    Closes: #525854
  * Use backticks instead of non-portable make $(shell) function in automake.
  * Do not install dselect and start-stop-daemon man pages when the programs
    have been disabled from configure.
  * Move Debian specific keyrings to the Debian vendor class and change the
    Ubuntu vendor class to inherit from it.
  * Do not set the Arch substvar in dpkg-source, avoiding generating warnings
    when there's no compiler present. Closes: #526132
  * Preserve faulting errno when printing reason in start-stop-daemon fatal
    function.
  * Only print fatal errno string in start-stop-daemon if it was non-zero.
  * Print the valid values for the IO scheduler class in start-stop-daemon
    --help output.
  * Print a warning when using obsolete '--print-installation-architecture'.
    Closes: #528171
  * Remove obsolete --largemem and --smallmem dpkg options.
  * Remove obsolete --force-auto-select dpkg option.
  * Remove obsolete priorities support from dpkg.
  * Remove obsolete 822-date program.

  [ Frank Lichtenheld ]