@@ -83,6 +83,8 @@ dpkg (1.15.1) UNRELEASED; urgency=low
     needed. Display a warning when it happens. Closes: #499088
   * Allow to combine -nc and -S in dpkg-buildpackage but display a warning
     saying that it's not advised. Closes: #304404
+  * Let dpkg-buildpackage error out with subprocerr() when dpkg-checkbuilddeps
+    is interrupted/killed by a signal. Closes: #498734
 
   [ Guillem Jover ]
   * Fix typo in dpkg output (‘unexecpted’ → ‘unexpected’). Closes: #519082
